k8s/backend-canary/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
  namespace: onetouch
spec:
  hosts:
    - backend
  http:
    - route:
        - destination:
            host: backend
            subset: primary
          weight: 100
